# earworms

./: .gitmodules  README.md
FrontEnd/: package-lock.json
FrontEnd/earworms-electron/: package-lock.json  package.json
FrontEnd/earworms-electron/src/: App.css  App.js  constants.js  index.css  start.js
FrontEnd/earworms-electron/src/components/: Sentiment.css  Sentiment.js
FrontEnd/earworms-electron/src/pages/: Main.css  Main.js  Settings.css  Settings.js
Service/: .gitignore  CMakeLists.txt  Service.cpp  Service.h  main.cpp
Service/lib/: CMakeLists.txt
Service/src/: CMakeLists.txt  main.cpp
Service/src/configuration/: CMakeLists.txt  configuration.cpp  configuration.h
